<resources>

    <string name="app_name">RunningTrainer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start">RunningTrainer</string>
    <string name="title_activity_record">Recording</string>
    <string name="title_activity_replay">Replay</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="pace">Pace</string>
    <string name="distance">Distance</string>    
    <string name="elapsed">Elapsed</string>    
    <string name="resend">Resend</string>    
    <string name="unit_of_measurement">Unit of measurement</string>    
    <string name="delete">Delete</string>    
    <string name="lap">Lap</string>    
    <string name="foobar">foobar</string>    
    <string name="sign_in">Sign in</string>        
</resources>